...
      appBar: AppBar(title: Text(l10n.signInTitle)),
      body: Padding(
        padding: const EdgeInsets.all(24),
        child: ListView(
          children: [
            TextField(
              key: const Key('signInEmailField'),
              controller: _emailController,
              decoration: InputDecoration(labelText: l10n.registerEmailLabel),
              keyboardType: TextInputType.emailAddress,
            ),
            const SizedBox(height: 16),
            TextField(
              key: const Key('signInPasswordField'),
              controller: _passwordController,
              decoration: InputDecoration(
                labelText: l10n.registerPasswordLabel,
              ),
              obscureText: true,
            ),
...
